<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- useful strings -->
    <string name="admob_publisher_id" translatable="false">ca-app-pub-9685812610140589/9567666476</string>
    <string name="app_name">Image Factory</string>
    <string name="digits" translatable="false">._-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ </string>
    <string name="digits_path" translatable="false">/._-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ </string>
    <string name="digits_number" translatable="false">0123456789</string>
    <string name="are_you_sure_you_want_to_do_this">Are you sure you want to do this?</string>
    <string name="operation_failed">Operation Failed : %s</string>
    <string name="select_file">Select File</string>
    <string name="perform_task">Perform Task</string>
    <string name="succeed">Successful</string>
    <string name="failed">Failure</string>
    <string name="loading">Loading…</string>
    <string name="output_filename_cannot_be_empty">Output filename cannot be empty</string>
    <string name="cannot_find_the_necessary_files">Cannot find the necessary files</string>
    <string name="input_filename_cannot_be_empty">Input filename cannot be empty</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <!-- APP's or not useful strings -->
    <string name="drawer_open">Drawer Opening</string>
    <string name="drawer_close">Drawer Closing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- operate boot images strings -->
    <string name="unpack_boot_image_source_file_path">Image file for unpacking</string>
    <string name="unpacked_to_folder">Unpacked to folder : \'%s\'</string>
    <string name="unpacked_ramdisk_to_folder">Unpacked ramdisk to folder : \'%s\'</string>
    <string name="output_folder_name">Output folder name</string>
    <string name="output_folder_already_exists">Output folder already exists</string>
    <string name="output_folder_cannot_be_empty">Output folder name cannot be empty</string>
    <string name="source_file_cannot_be_empty">Source file cannot be empty</string>
    <string name="source_file_not_exists">Source file does not exist</string>
    <string name="unpack_boot_image_output_folder_name">Unpacked boot image output folder name</string>
    <string name="port_base">Choose official unpacked boot image</string>
    <string name="port_sample">Choose target unpacked boot image</string>
    <string name="porting">Porting…</string>
    <string name="repacking_failed">Repacking failed</string>
    <string name="repacked_to_file">Repacked to file \'%s\'</string>
    <string name="repack_boot_image_output_file_name">Repacked output boot image file name</string>
    <string name="unpacking">Unpacking…</string>
    <string name="packing">Packing…</string>
    <string name="repacking">Repacking…</string>
    <!-- flash or back up boot images strings -->
    <string name="backuping">Backuping…</string>
    <string name="backup_success">Backup Success</string>
    <string name="backup_to_file">Backed up to a file : \'%s\'</string>
    <string name="partition_type">Partition Type</string>
    <string name="partition_path">Partition Path</string>
    <string name="output_filename">Output file name</string>
    <string name="flash_name">Image file for flashing</string>
    <string name="flashing">Flashing…</string>
    <string name="flashed_file_from">Flashed file from : \'%s\'</string>
    <string name="cannot_found_partition">Cannot found this partition</string>
    <!-- convert images strings -->
    <string name="simg2img_select">Sparse image path for converting</string>
    <string name="simg2img_output">Output raw image filename</string>
    <string name="sdat2img_transfer_list">Necessary : system.transfer.list</string>
    <string name="sdat2img_select_transfer_list">Select system.transfer.list</string>
    <string name="sdat2img_sysdat_image">Necessary : system.new.dat</string>
    <string name="sdat2img_select_sysdat_image">Select system.new.dat</string>
    <string name="sdat2img_output">Output converted image filename</string>
    <string name="img2simg_select">Raw image path for converting</string>
    <string name="img2simg_output">Output sparse image filename</string>
    <string name="sparse_image">Sparse Image</string>
    <string name="converting">Converting…</string>
    <string name="converted_to_file">Converted to file : \'%s\'</string>
    <!-- firmware tools strings -->
    <string name="firmware_output_path">Separated files output folder</string>
    <string name="firmware_file_path">The UPDATE.APP for splitting</string>
    <string name="extracted_to_folder">Separated to folder : \'%s\'</string>
    <string name="extracting">Splitting…</string>
    <!-- reboot utils strings -->
    <string name="reboot_normal_title">Reboot</string>
    <string name="reboot_recovery_title">Reboot Recovery</string>
    <string name="reboot_bootloader_title">Reboot Bootloader</string>
    <string name="reboot_hot_title">Hot Reboot</string>
    <!-- menu strings -->
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <!-- File Chooser strings -->
    <string name="no_permission_to_access">No permission to access!</string>
    <string name="upper_path">Upper Directory</string>
    <string name="browse">Browse</string>
    <string name="custom_your_images">CUSTOM YOUR IMAGES</string>
    <!-- setting strings -->
    <string name="setting_data_path_key" translatable="false">data_path</string>
    <string name="setting_data_path_title">Data Path</string>
    <string name="setting_data_path_summary">Application output folder, most of the data exists here</string>
    <string name="setting_clean_data_key" translatable="false">setting_clean_data_key</string>
    <string name="setting_clean_data_summary">Clean all data on this application</string>
    <string name="setting_clean_data_title">Clean Data</string>
    <string name="getting_device_information">Getting Device Information…</string>
    <string name="maybe_this_function_unsupported_your_device">Maybe this function unsupported your device</string>
    <string name="logcat">Logcat</string>
    <string name="browse_home_page">Browse Home Page</string>
    <string name="i_agree">I agree</string>
    <string name="disclaimer_content">Comming...</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="change_log">Change Log</string>
    <string name="warning">Warning</string>
    <string name="no_write_external_storage_permission">Can not get permission to operate the storage space, the program can not run, click OK to exit!</string>
    <string name="close">Close</string>
    <string name="author_name">Build Author : </string>
    <string name="email">Email : </string>
    <string name="copyright">Copyright © 2017 fuldaros. All Rights Reserved.</string>
    <string name="qq_group" translatable="false">Build: </string>
    <string name="terminal">Terminal Output</string>
    <string name="function_simg2img">Simg2img</string>
    <string name="function_unpack_boot_image">Unpack Image</string>
    <string name="function_repack_boot_image">Repack Image</string>
    <string name="function_port_boot_image">Port Image</string>
    <string name="function_backup_boot_image">Backup Image</string>
    <string name="function_flash_boot_image">Flash Image</string>
    <string name="function_img2simg">Img2simg</string>
    <string name="function_sdat2img">Sdat2img</string>
    <string name="function_split_app">Split App</string>
    <string name="function_about">About</string>
    <string name="function_setting">Setting</string>
    <string name="function_logcat">Logcat</string>
    <string name="function_unpack_boot_image_summary">Unpacking boot image to output folder</string>
    <string name="function_repack_boot_image_summary">Repacking boot image from output folder</string>
    <string name="function_port_boot_image_summary">Porting a new boot image from sample device</string>
    <string name="function_backup_boot_image_summary">Backing up boot/recovery to file</string>
    <string name="function_flash_boot_image_summary">Flashing file to your boot/recovery</string>
    <string name="function_simg2img_summary">Convert sparse image to raw image</string>
    <string name="function_img2simg_summary">Convert raw image to sparse image</string>
    <string name="function_sdat2img_summary">Convert dat image to raw image</string>
    <string name="function_split_app_summary">Split update firmware of HUAWEI officially</string>
    <string name="choose_unpacked_boot_image">Choose unpacked boot image</string>
    <string name="raw_image">Raw Image</string>
    <string name="function_split_app_choice">Choose you want to split</string>
    <string name="cpio_target">Target : </string>
    <string name="cpio_source">Source : </string>
    <string name="permission">Permission</string>
    <string name="gid">Groud ID</string>
    <string name="uid">User ID</string>
    <string name="save">Save</string>
    <string name="new_cpio_item">New Cpio Item</string>
    <string name="cpio_editor">Cpio Editor</string>
    <string name="edit_target">Edit Target Location</string>
    <string name="add_new_file">Add new file</string>
    <string name="rootfs">ROOTFS/</string>
    <string name="todo">TODO</string>
</resources>


